paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_005/target.compile.log
warning: unused import: `std::mem`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_005/target.rs:1:5
  |
1 | use std::mem;
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_005/target.rs:37:14
   |
37 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_005/target.rs:19:9
   |
19 |     let mut data: Vec<U32> = (0..N).map(|i| (i + 1) * 3 + 1).collect();
   |         ----^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/structure_and_union_spec_c18/sample_005/target.rs:20:9
   |
20 |     let mut sum: U32 = data.iter().sum();
   |         ----^^^
   |         |
   |         help: remove this `mut`

error: aborting due to 1 previous error; 3 warnings emitted

For more information about this error, try `rustc --explain E0277`.